# thane

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/thane-bridge/: Cargo.toml  build.rs
crates/thane-bridge/src/: lib.rs  thane_bridge.udl
crates/thane-browser/: Cargo.toml
crates/thane-browser/src/: lib.rs  scripting.rs  traits.rs  webkit_backend.rs
crates/thane-cli/: Cargo.toml
crates/thane-cli/src/: main.rs
crates/thane-cli/src/commands/: audit.rs  browser.rs  mod.rs  notification.rs  queue.rs  sandbox.rs  sidebar.rs  surface.rs  system.rs  terminal.rs  workspace.rs
crates/thane-core/: Cargo.toml
crates/thane-core/src/: agent.rs  agent_queue.rs  audit.rs  command_block.rs  config.rs  cost_tracker.rs  error.rs  git.rs  keybinding.rs  lib.rs  notification.rs  pane.rs  panel.rs  port_scanner.rs  prompt_capture.rs  prompt_scanner.rs  queue_executor.rs  sandbox.rs  session.rs  sidebar.rs  workspace.rs
crates/thane-gtk/: Cargo.toml
crates/thane-gtk/src/: application.rs  css.rs  fonts.rs  lib.rs  rpc_handler.rs  setup.rs  shortcuts.rs  window.rs
crates/thane-gtk/src/agent/: cost_tracker.rs  dashboard.rs  mod.rs
crates/thane-gtk/src/browser/: browser_surface.rs  mod.rs  omnibar.rs
crates/thane-gtk/src/sidebar/: agent_queue_panel.rs  audit_panel.rs  git_diff_panel.rs  help_panel.rs  mod.rs  notification_panel.rs  plans_panel.rs  sandbox_panel.rs  settings_panel.rs  sidebar_view.rs  status_bar.rs  token_panel.rs  workspace_row.rs
crates/thane-gtk/src/split/: mod.rs  split_container.rs  tab_bar.rs
crates/thane-gtk/src/terminal/: mod.rs  terminal_surface.rs
crates/thane-gtk/src/workspace/: mod.rs  workspace_view.rs
crates/thane-ipc/: Cargo.toml
crates/thane-ipc/src/: auth.rs  client.rs  server.rs
crates/thane-persist/: Cargo.toml
crates/thane-persist/src/: audit_store.rs  history_store.rs  lib.rs  policy.rs  queue_history_store.rs  snapshot.rs  store.rs
crates/thane-platform/: Cargo.toml
crates/thane-platform/src/: claude_md.rs  dirs.rs  landlock.rs  lib.rs  linux.rs  macos.rs  macos_dirs.rs  namespace.rs  pidlock.rs  sandbox_macos.rs  seccomp.rs  traits.rs
crates/thane-rpc/: Cargo.toml
crates/thane-rpc/src/: lib.rs  methods.rs  params.rs  protocol.rs
crates/thane-terminal/: Cargo.toml
crates/thane-terminal/src/: lib.rs  osc.rs  traits.rs  vte_backend.rs
data/: com.thane.app.desktop  com.thane.app.gschema.xml  com.thane.app.metainfo.xml  thane.service
data/resources/: style.css  thane.gresource.xml
doc/: thane-cli.1  thane.1
frontends/macos/: Info.plist  Package.resolved  Package.swift  thane-macos.entitlements
frontends/macos/Resources/: AppIcon.icns
frontends/macos/Sources/App/: AppDelegate.swift  MainMenu.swift  VersionUtils.swift
frontends/macos/Sources/Bridge/: DTOTypes.swift  IpcServer.swift  RustBridge.swift  ThaneBridge.swift
frontends/macos/Sources/Browser/: BrowserScripting.swift  BrowserView.swift  OmnibarView.swift
frontends/macos/Sources/Panels/: AgentQueuePanel.swift  AuditPanel.swift  GitDiffPanel.swift  HelpPanel.swift  NotificationPanel.swift  PlansPanel.swift  ReloadablePanel.swift  SandboxPanel.swift  SettingsPanel.swift  TokenPanel.swift
frontends/macos/Sources/Sidebar/: SidebarView.swift  WorkspaceRowView.swift
frontends/macos/Sources/Split/: SplitContainer.swift  TabBarView.swift
frontends/macos/Sources/StatusBar/: StatusBarView.swift
frontends/macos/Sources/Theme/: ThaneTheme.swift  ViewFactories.swift
frontends/macos/Sources/Window/: MainWindow.swift  MainWindowController.swift
frontends/macos/Sources/Workspace/: WorkspaceView.swift
frontends/macos/Tests/: ArrowKeyTests.swift  DTOTypes.swift  FeatureParityTests.swift  IpcServer.swift  RustBridge.swift  RustBridgeTests.swift  SplitNodeTests.swift  ThaneBridgeStub.swift  ThaneTheme.swift  ThemeTests.swift  UpdateCheckTests.swift  VersionUtils.swift
frontends/macos/thane_bridgeFFI/: thane_bridgeFFI.c
frontends/macos/thane_bridgeFFI/include/: module.modulemap  thane_bridgeFFI.h
scripts/: generate-icons.sh
src/: main.rs
