[package]
name = "thane-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTK4 UI layer for thane"

[dependencies]
thane-core.workspace = true
thane-platform.workspace = true
thane-terminal = { workspace = true, features = ["vte-backend"] }
thane-browser = { workspace = true, features = ["webkit-backend"] }
thane-rpc.workspace = true
thane-ipc.workspace = true
thane-persist.workspace = true
gtk4.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
vte4.workspace = true
webkit6.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
libc.workspace = true
ureq.workspace = true

[dev-dependencies]
