[package]
name = "thane-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unix socket IPC server and client for thane"

[dependencies]
thane-rpc.workspace = true
thane-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
nix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[dev-dependencies]
