[package]
name = "thane-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform abstraction layer for thane"

[dependencies]
thane-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
libc.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
notify-rust.workspace = true

[[bin]]
name = "thane-sandbox-exec"
path = "src/bin/sandbox_exec.rs"
required-features = []

[dev-dependencies]
