[package]
name = "thane-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON-RPC protocol for thane socket API"

[dependencies]
thane-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
